Word break to prevent overflow in notify

--- a/app/App/Panel/Notify/style/index.styl
+++ b/app/App/Panel/Notify/style/index.styl
@@ -69,6 +69,7 @@
         z-index 3
         padding-bottom 10px
         padding-top 10px
+        word-break break-word
 
         .notifyBodyLine
           margin-bottom 40px
